# code-conjurer

./: .coderc.toml  .gitignore  Cargo.toml  rustfmt.toml
src/: cli.rs  io.rs  main.rs  path.rs  template.rs
src/commands/: generate.rs  generate2.rs  list.rs  mod.rs  path.rs
src/commands/generate/: error.rs
src/config/: error.rs  mod.rs  partial_toml_config.rs  toml_config.rs
src/config/toml_config/: error.rs
src/diagnostics/: file_not_found.rs  filename_invalid.rs  mod.rs  param_not_found.rs
src/dir_browser/: browser.rs  entry.rs  file_creator.rs  mod.rs
src/io/: buffer_reader.rs  file_system_reader.rs  path.rs
src/template/: mod.rs  parse.rs  pipes.rs
src/template/parse/: error.rs
src/terminal/: create_file.rs  mod.rs  utils.rs
src/traits/: append.rs  ignore.rs  into_miette.rs  mod.rs  try_default.rs  try_from.rs
