[package]
name = "code-conjurer"
version = "1.0.0"
edition = "2021"
author = "JekTheCoder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
miette = { version = "5.5.0", features = ["fancy"] }
thiserror = { version = "1.0.38" }
tui = "0.19"
crossterm = "0.25"
shellexpand = "3.1.0"
toml = "0.7.3"
serde = { version= "1.0.160", features = ["derive"]  }
